structure html css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome esercizio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Responsive layout</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
-    <h1>DABE</h1>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div id="logo">
+                <img src="img/logo.png" alt="Logo">
+            </div>
+            <nav class="debug">
+                Navigation
+            </nav>
+        </div>
+    </header>
 
+    <!-- Main -->
+    <main>
+        <section id="features">
+            <div class="card debug">1</div>
+            <div class="card debug">2</div>
+            <div class="card debug">3</div>
+            <div class="card debug">4</div>
+            <div class="card debug">5</div>
+        </section>
+
+        <!-- Section main  -->
+        <section id="planning" class="even">
+            <div class="container debug">
+                immagine
+                <h1>Strategic planner</h1>
+                testo
+                <div class="card card-negative rounded-big">
+                    immagine
+                    titolo
+                    testo
+                    freccia
+                </div>
+            </div>
+        </section>
+        <!-- Testimonials -->
+        <section id="testimonials">
+            <div class="container debug">
+                <h2>We are committed ex....</h2>
+                <p>Paragrafo di testo</p>
+                <div class="card">Card 1</div>
+                <div class="card">Card 2</div>
+                <div class="card">Card 3</div>
+            </div>
+        </section>
+
+        <!-- Benefits -->
+        <section id="benefits" class="even">
+            <div class="container debug">
+                <h2>Benefits of work with us</h2>
+                <div class="card-negative">
+                    <h3>1</h3>
+                </div>
+                <div class="card-negative">
+                    <h3>2</h3>
+                </div>
+                <div class="card-negative">
+                    <h3>3</h3>
+                </div>
+                <div class="card-negative">
+                    <h3>4</h3>
+                </div>
+                <div class="card-negative">
+                    <h3>5</h3>
+                </div>
+                <div class="card-negative">
+                    <h3>6</h3>
+                </div>
+            </div>
+        </section>
+
+        <!-- About us -->
+        <section id="about-us">
+            <div class="container debug">
+                <h3>About us</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda numquam eveniet, temporibus
+                    dolorem
+                    ipsam
+                    tempora necessitatibus explicabo consequatur quos unde?</p>
+            </div>
+        </section>
+
+        <!-- Call to action -->
+        <section id="call-to-action" class="even">
+            <div class="container debug tac">
+                Call to action
+            </div>
+        </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+        <div class="container debug tac">
+            Footer
+        </div>
+    </footer>
 </body>
 
 </html>
