--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div id="logo">
+            <div id="logo" class="debug">
                 <img src="img/logo.png" alt="Logo">
             </div>
             <nav class="debug">
-                Navigation
+                <div class="icon-hamburger"><i class="fa-solid fa-bars"></i></div>
             </nav>
         </div>
     </header>
