--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div id="logo" class="debug">
-                <img src="img/logo.png" alt="Logo">
+            <div class="row">
+                <div id="logo" class="debug">
+                    <img src="img/logo.png" alt="Logo">
+                </div>
+                <nav class="debug">
+                    <div class="icon-hamburger"><i class="fa-solid fa-bars"></i></div>
+                    <ul>
+                        <li><a href="#" class="debug-g">Planning</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#" class="btn">Get started</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="debug">
-                <div class="icon-hamburger"><i class="fa-solid fa-bars"></i></div>
-            </nav>
+
         </div>
     </header>
 
