--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <header>
         <div class="container">
             <div class="row">
-                <div id="logo" class="debug">
+                <div id="logo">
                     <img src="img/logo.png" alt="Logo">
                 </div>
-                <nav class="debug">
+                <nav>
                     <div class="icon-hamburger"><i class="fa-solid fa-bars"></i></div>
                     <ul>
-                        <li><a href="#" class="debug-g">Planning</a></li>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="#planning" class="debug-g">Planning</a></li>
+                        <li><a href="#testimonial">Testimonials</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#about-us">About Us</a></li>
                         <li><a href="#" class="btn">Get started</a></li>
                     </ul>
                 </nav>
