section planning and strategic

--- a/index.html
+++ b/index.html
@@ -39,23 +39,47 @@
 
         </div>
     </header>
-
     <!-- Main -->
     <main>
         <section id="features">
-            <div class="card debug">1</div>
-            <div class="card debug">2</div>
-            <div class="card debug">3</div>
-            <div class="card debug">4</div>
-            <div class="card debug">5</div>
+            <div class="container">
+                <div class="card rounded-small debug">1</div>
+                <div class="card rounded-small tac debug">
+                    <div class="card-icon"><i class="fa-solid fa-file-code"></i></div>
+                    <h3 class="card-title">Clean code</h3>
+                    <p class="icon-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit porro iusto
+                        quidem culpa asperiores laboriosam excepturi et quisquam earum quaerat?</p>
+                </div>
+                <div class="card rounded-small tac debug">
+                    <div class="card-icon"><i class="fa-solid fa-compass-drafting"></i></div>
+                    <h3 class="card-title">Web design</h3>
+                    <p class="icon-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit porro iusto
+                        quidem culpa asperiores laboriosam excepturi et quisquam earum quaerat?</p>
+                </div>
+                <div class="card rounded-small tac debug">
+                    <div class="card-icon"><i class="fa-solid fa-laptop-code"></i></div>
+                    <h3 class="card-title">Development</h3>
+                    <p class="icon-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit porro iusto
+                        quidem culpa asperiores laboriosam excepturi et quisquam earum quaerat?</p>
+                </div>
+                <div class="card rounded-small tac debug">
+                    <div class="card-icon"><i class="fa-solid fa-bullhorn"></i></div>
+                    <h3 class="card-title">Branding</h3>
+                    <p class="icon-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit porro
+                        iusto
+                        quidem culpa asperiores laboriosam excepturi et quisquam earum quaerat?</p>
+                </div>
+            </div>
+
         </section>
 
         <!-- Section main  -->
         <section id="planning" class="even">
             <div class="container debug">
-                immagine
+                <img src="img/planning1.png" alt="" class="img-res">
                 <h1>Strategic planner</h1>
-                testo
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque ad enim harum, amet soluta
+                    unde neque a mollitia eos.</p>
                 <div class="card card-negative rounded-big">
                     immagine
                     titolo
