--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
         <!-- Section main  -->
         <section id="planning" class="even">
             <div class="container debug">
-                <img src="img/planning1.png" alt="" class="img-res">
+                <img src="img/planning1.png" alt="Planning1" class="img-res">
                 <h1>Strategic planner</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque ad enim harum, amet soluta
                     unde neque a mollitia eos.</p>
-                <div class="card card-negative rounded-big">
-                    immagine
-                    titolo
-                    testo
-                    freccia
+                <div class="card card-negative rounded-big tac">
+                    <img src="img/planning2.png" alt="Planning2" class="img-res">
+                    <h4>App Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, repellat!</p>
+                    <div class="square circle"><a href="#"><i class="fa-solid fa-arrow-down-long"></i></a></div>
                 </div>
             </div>
         </section>
